Moving around stuff.
git-svn-id: svn://hamptoncatlin.com/haml/tags/trunk@78 7063305b-7217-0410-af8c-cdc13e5119b9

--- a/test/results/helpers.xhtml
+++ b/test/results/helpers.xhtml
@@ -1,1 +1,25 @@
 &amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;&amp;
+<div>
+  <p class='title'>Title</p>
+  <p class='text'>
+    Woah this is really crazy
+    I mean wow,
+    man.
+  </p>
+</div>
+<div>
+  <p class='title'>Title</p>
+  <p class='text'>
+    Woah this is really crazy
+    I mean wow,
+    man.
+  </p>
+</div>
+<div>
+  <p class='title'>Title</p>
+  <p class='text'>
+    Woah this is really crazy
+    I mean wow,
+    man.
+  </p>
+</div>
