--- a/test/results/standard.xhtml
+++ b/test/results/standard.xhtml
@@ -2,7 +2,7 @@
 <html xml-lang='en-US'>
   <head>
     <title>Hampton Catlin Is Totally Awesome</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
   </head>
   <body>
     <!-- You're In my house now! -->
@@ -19,6 +19,17 @@
       PipesIgnored|PipesIgnored|PipesIgnored|
       1|2|3
     </p>
+    <div class='silent'>
+      this shouldn't evaluate but now it should!
+    </div>
+    <ul class='really cool'>
+      <li>a</li>
+      <li>b</li>
+      <li>c</li>
+      <li>d</li>
+      <li>e</li>
+      <li>f</li>
+    </ul>
     <div class='of_divs_with_underscore' id='combo'>with this text</div>
     <div class='footer'>
       <strong class='shout'>
