Releasing version 1.0.3 - now compatible with Rails 1.2.
git-svn-id: svn://hamptoncatlin.com/haml/tags/rel_1-0-3@290 7063305b-7217-0410-af8c-cdc13e5119b9

--- a/test/results/silent_script.xhtml
+++ b/test/results/silent_script.xhtml
@@ -50,7 +50,7 @@
     <li>z</li>
   </ul>
   <h1>I can catch errors!</h1>
-  Oh no! "uninitialized constant Foo" happened!
+  Oh no! "undefined method `silly' for String:Class" happened!
   <p>
     "false" is:
     false
