--- a/test/results/standard.xhtml
+++ b/test/results/standard.xhtml
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- You're In my house now! -->
-    <div class='header'>
+Foo    <div class='header'>
       Yes, ladies and gentileman. He is just that egotistical.
       Fantastic! This should be multi-line output
       The question is if this would translate! Ahah!
