Fixed minor comment parsing bug, added test cases.

--- a/test/haml/results/helpers.xhtml
+++ b/test/haml/results/helpers.xhtml
@@ -31,6 +31,9 @@
       <h1>Big!</h1>
       <p>Small</p>
       <!-- Invisible -->
+      <!-- Invisible -   invisible -->
+      <!-- -                     invisible -                     -->
+      <!-- --><!-- -->
     </div>
     <div class='dilly'>
       <p>foo</p>
