--- a/test/haml/results/filters.xhtml
+++ b/test/haml/results/filters.xhtml
@@ -5,6 +5,13 @@
   /* line 6 */
   h1 { font-weight: normal; }
 </style>
+<style>
+  /* line 1 */
+  p { border-style: dotted; border-width: 22px; border-color: fuchsia; }
+  
+  /* line 8 */
+  h1 { font-weight: normal; }
+</style>
 TESTING HAHAHAHA!
 <p>
   <script type='text/javascript'>
