coffeescript filter + test + alias and rails 3.2 fix

--- a/test/haml/results/filters.xhtml
+++ b/test/haml/results/filters.xhtml
@@ -15,6 +15,20 @@ TESTING HAHAHAHA!
     //]]>
   </script>
 </p>
+<p>
+  <script type='text/javascript'>
+    //<![CDATA[
+      (function() {
+        var newline;
+      
+        newline = function(str) {
+          return "\n" + str;
+        };
+      
+      }).call(this);
+    //]]>
+  </script>
+</p>
 This
   Is
     Plain
