Simplify SCSS test expectation
With some Gemfiles, Sass turns the hex color into a named color. With
others, it doesn't. Why? I have no idea. But I'm testing Haml here, not
Sass so I don't really care - just make the expectation enough to
demonstrate that Sass was actually invoked.

--- a/test/results/filters.xhtml
+++ b/test/results/filters.xhtml
@@ -7,9 +7,9 @@
 </style>
 <style>
   /* line 1 */
-  p { border-style: dotted; border-width: 22px; border-color: fuchsia; }
+  p { border-style: dotted; border-width: 22px; }
   
-  /* line 8 */
+  /* line 7 */
   h1 { font-weight: normal; }
 </style>
 TESTING HAHAHAHA!
