--- a/test/results/silent_script.xhtml
+++ b/test/results/silent_script.xhtml
@@ -50,7 +50,7 @@
     <li>z</li>
   </ul>
   <h1>I can catch errors!</h1>
-  Oh no! "undefined method `silly' for String:Class" happened!
+  Oh no! "foo" happened!
   <p>
     "false" is:
     false
